--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "sensetivity/sms-fly-cakephp-3.x",
     "description": "SMSFly plugin for CakePHP 3.x",
     "type": "cakephp-plugin",
-    "minimum-stability": "1.0",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Mykola Pukhalskyi",
